# dynamic-power-daemon

./: DEVELOPMENT_OVERVIEW.md  Makefile  PKGBUILD  PROJECT_SUMMARY.md  README.md  Session_knowledge.md  dynamic-power-daemon.install  dynamic-power.conf  dynamic-power.service  dynamic_power.sh  dynamic_power_design_brief.md  dynamic_power_monitor.sh  my_fixes.patch  my_fixes2.patch  screen-info.txt
docs/: CARDINAL_DEVELOPMENT_RULES.md  CHANGELOG.md  DBUS_COMMUNICATION.md  DBUS_REFERENCE.md  DESIGN_OVERVIEW.md  DEVELOPMENT_OVERVIEW.md  ENGINES_GUIDE.md  FEATURE_MATRIX.md  FEATURE_TOGGLES.md  GLOSSARY.md  ONBOARDING_updated.md  PANEL_OVERDRIVE.md  PROJECT_HISTORY_LOG.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SCREEN_REFRESH_FEATURE.md  STARTUP_SEQUENCE.md  Session_knowledge.md  TASK_SCOPE.md  TECHNICAL_DEBT.md  WORKFLOW.md  WORKFLOW_GUIDE.md  battery_powersaving_features.md  dbus_interface_introspection.txt  debug_cleanup_plan.md  dynamic-power-daemon.install  dynamic_power_architecture_overview_updated.md  dynamic_power_command_user_manual.md  dynamic_power_design_brief.md  dynamic_power_project_history.md  dynamic_power_user_manual.md  screen_refresh_feature.md
python/: Makefile  PKGBUILD
python/dynamic_power/: ROADMAP.md  __init__.py  cli.py  config.py  dbus_interface.py  debug.py  dynamic_power_command.py  dynamic_power_launcher.py  dynamic_power_session_helper.py  dynamic_power_user.py  epp.py  old_dynamic_power_command.py  power_profiles.py  sensors.py  user_dbus_interface.py  utils.py
python/resources/: dynamic-power.desktop
python/resources/systemd-user/: dynamic_power_command.service  dynamic_power_session.service
python/share/dynamic-power/: dynamic-power-user.yaml  dynamic-power.yaml
resources/: dynamic-power-user.yaml  dynamic-power.desktop  dynamic-power.yaml  dynamic_power.yaml
resources/dbus/: org.dynamic_power.Daemon.conf  org.dynamic_power.DaemonCpp.conf
resources/systemd/: dynamic_power.service
resources/systemd-user/: 90-dynamic-power.preset  dynamic_power_session.service  net.hadess.PowerProfiles.service
src/: CMakeLists.txt  main.cpp
src/config/: config.cpp  config.h
src/daemon/: daemon.cpp  daemon.h  daemon_dbus_interface.cpp  daemon_dbus_interface.h  dbus_adaptor.cpp  dbus_adaptor.h  log.cpp  log.h  ppd_compat.cpp  ppd_compat.h
src/resources/: dynamic-power-user.yaml  dynamic_power.yaml
src/resources/systemd/: dynamic_power.service
src/userctl/: App.cpp  App.h  Config.cpp  Config.h  DbusClient.cpp  DbusClient.h  LoadGraphWidget.cpp  LoadGraphWidget.h  MainWindow.cpp  MainWindow.h  ProcessMonitor.cpp  ProcessMonitor.h  ProcessRuleEditor.cpp  ProcessRuleEditor.h  ProfileConfigDialog.cpp  ProfileConfigDialog.h  TrayController.cpp  TrayController.h  UPowerClient.cpp  UPowerClient.h  UserFeatures.cpp  UserFeatures.h  main.cpp
src/userctl/features/: Feature.h  FeatureBase.cpp  FeatureBase.h  FeatureRegistry.cpp  FeatureRegistry.h  PanelAutohideFeature.cpp  PanelAutohideFeature.h  RootCompositeFeature.cpp  RootCompositeFeature.h  RootFeatureDetector.cpp  RootFeatureDetector.h  ScreenRefreshFeature.cpp  ScreenRefreshFeature.h
